--- a/coverage-test/Command/dashboard.html
+++ b/coverage-test/Command/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="en">
  <head>
   <meta charset="UTF-8">
-  <title>Dashboard for D:\Sites\Lab\ToDo-Co\src\Form</title>
+  <title>Dashboard for D:\Sites\Lab\ToDo-Co\src\Command</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../_css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="../_css/nv.d3.min.css" rel="stylesheet" type="text/css">
@@ -17,7 +17,7 @@
       <nav aria-label="breadcrumb">
        <ol class="breadcrumb">
          <li class="breadcrumb-item"><a href="../index.html">D:\Sites\Lab\ToDo-Co\src</a></li>
-         <li class="breadcrumb-item"><a href="index.html">Form</a></li>
+         <li class="breadcrumb-item"><a href="index.html">Command</a></li>
          <li class="breadcrumb-item active">(Dashboard)</li>
 
        </ol>
@@ -58,6 +58,7 @@
         </tr>
        </thead>
        <tbody>
+       <tr><td><a href="DeleteTaskCommand.php.html#11">App\Command\DeleteTaskCommand</a></td><td class="text-right">0%</td></tr>
 
        </tbody>
       </table>
@@ -111,6 +112,8 @@
         </tr>
        </thead>
        <tbody>
+       <tr><td><a href="DeleteTaskCommand.php.html#16"><abbr title="App\Command\DeleteTaskCommand::__construct">__construct</abbr></a></td><td class="text-right">0%</td></tr>
+       <tr><td><a href="DeleteTaskCommand.php.html#29"><abbr title="App\Command\DeleteTaskCommand::execute">execute</abbr></a></td><td class="text-right">0%</td></tr>
 
        </tbody>
       </table>
@@ -155,7 +158,7 @@ $(document).ready(function() {
       .yAxis.tickFormat(d3.format('d'));
 
     d3.select('#classCoverageDistribution svg')
-      .datum(getCoverageDistributionData([0,0,0,0,0,0,0,0,0,0,0,3], "Class Coverage"))
+      .datum(getCoverageDistributionData([1,0,0,0,0,0,0,0,0,0,0,0], "Class Coverage"))
       .transition().duration(500).call(chart);
 
     nv.utils.windowResize(chart.update);
@@ -173,7 +176,7 @@ $(document).ready(function() {
       .yAxis.tickFormat(d3.format('d'));
 
     d3.select('#methodCoverageDistribution svg')
-      .datum(getCoverageDistributionData([0,0,0,0,0,0,0,0,0,0,0,7], "Method Coverage"))
+      .datum(getCoverageDistributionData([2,0,0,0,0,0,0,0,0,0,0,1], "Method Coverage"))
       .transition().duration(500).call(chart);
 
     nv.utils.windowResize(chart.update);
@@ -223,7 +226,7 @@ $(document).ready(function() {
     chart.yAxis.axisLabel('Cyclomatic Complexity');
 
     d3.select('#classComplexity svg')
-      .datum(getComplexityData([[100,3,"<a href=\"SearchType.php.html#19\">App\\Form\\SearchType<\/a>"],[100,2,"<a href=\"TaskType.php.html#11\">App\\Form\\TaskType<\/a>"],[100,3,"<a href=\"UserType.php.html#16\">App\\Form\\UserType<\/a>"]], 'Class Complexity'))
+      .datum(getComplexityData([[0,3,"<a href=\"DeleteTaskCommand.php.html#11\">App\\Command\\DeleteTaskCommand<\/a>"]], 'Class Complexity'))
       .transition()
       .duration(500)
       .call(chart);
@@ -247,7 +250,7 @@ $(document).ready(function() {
     chart.yAxis.axisLabel('Method Complexity');
 
     d3.select('#methodComplexity svg')
-      .datum(getComplexityData([[100,1,"<a href=\"SearchType.php.html#21\">App\\Form\\SearchType::buildForm<\/a>"],[100,1,"<a href=\"SearchType.php.html#42\">App\\Form\\SearchType::configureOptions<\/a>"],[100,1,"<a href=\"SearchType.php.html#55\">App\\Form\\SearchType::getBlockPrefix<\/a>"],[100,1,"<a href=\"TaskType.php.html#13\">App\\Form\\TaskType::buildForm<\/a>"],[100,1,"<a href=\"TaskType.php.html#25\">App\\Form\\TaskType::configureOptions<\/a>"],[100,2,"<a href=\"UserType.php.html#18\">App\\Form\\UserType::buildForm<\/a>"],[100,1,"<a href=\"UserType.php.html#57\">App\\Form\\UserType::configureOptions<\/a>"]], 'Method Complexity'))
+      .datum(getComplexityData([[0,1,"<a href=\"DeleteTaskCommand.php.html#16\">App\\Command\\DeleteTaskCommand::__construct<\/a>"],[100,1,"<a href=\"DeleteTaskCommand.php.html#22\">App\\Command\\DeleteTaskCommand::configure<\/a>"],[0,1,"<a href=\"DeleteTaskCommand.php.html#29\">App\\Command\\DeleteTaskCommand::execute<\/a>"]], 'Method Complexity'))
       .transition()
       .duration(500)
       .call(chart);
