--- a/coverage-test/Command/index.html
+++ b/coverage-test/Command/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
  <head>
   <meta charset="UTF-8">
-  <title>Code Coverage for D:\Sites\Lab\ToDo-Co\src\Security</title>
+  <title>Code Coverage for D:\Sites\Lab\ToDo-Co\src\Command</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../_css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="../_css/octicons.css" rel="stylesheet" type="text/css">
@@ -17,7 +17,7 @@
       <nav aria-label="breadcrumb">
        <ol class="breadcrumb">
          <li class="breadcrumb-item"><a href="../index.html">D:\Sites\Lab\ToDo-Co\src</a></li>
-         <li class="breadcrumb-item active">Security</li>
+         <li class="breadcrumb-item active">Command</li>
          <li class="breadcrumb-item">(<a href="dashboard.html">Dashboard</a>)</li>
 
        </ol>
@@ -43,23 +43,15 @@
      </thead>
      <tbody>
       <tr>
-       <td class="warning">Total</td>
-       <td class="warning big">       <div class="progress">
-         <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="88.00" aria-valuemin="0" aria-valuemax="100" style="width: 88.00%">
-           <span class="sr-only">88.00% covered (warning)</span>
+       <td class="danger">Total</td>
+       <td class="danger big">       <div class="progress">
+         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="0.00" aria-valuemin="0" aria-valuemax="100" style="width: 0.00%">
+           <span class="sr-only">0.00% covered (danger)</span>
          </div>
        </div>
 </td>
-       <td class="warning small"><div align="right">88.00%</div></td>
-       <td class="warning small"><div align="right">22&nbsp;/&nbsp;25</div></td>
-       <td class="warning big">       <div class="progress">
-         <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="77.78" aria-valuemin="0" aria-valuemax="100" style="width: 77.78%">
-           <span class="sr-only">77.78% covered (warning)</span>
-         </div>
-       </div>
-</td>
-       <td class="warning small"><div align="right">77.78%</div></td>
-       <td class="warning small"><div align="right">7&nbsp;/&nbsp;9</div></td>
+       <td class="danger small"><div align="right">0.00%</div></td>
+       <td class="danger small"><div align="right">0&nbsp;/&nbsp;4</div></td>
        <td class="danger big">       <div class="progress">
          <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="0.00" aria-valuemin="0" aria-valuemax="100" style="width: 0.00%">
            <span class="sr-only">0.00% covered (danger)</span>
@@ -68,26 +60,6 @@
 </td>
        <td class="danger small"><div align="right">0.00%</div></td>
        <td class="danger small"><div align="right">0&nbsp;/&nbsp;2</div></td>
-      </tr>
-
-      <tr>
-       <td class="warning"><img src="../_icons/file-directory.svg" class="octicon" /><a href="Voter/index.html">Voter</a></td>
-       <td class="warning big">       <div class="progress">
-         <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="85.71" aria-valuemin="0" aria-valuemax="100" style="width: 85.71%">
-           <span class="sr-only">85.71% covered (warning)</span>
-         </div>
-       </div>
-</td>
-       <td class="warning small"><div align="right">85.71%</div></td>
-       <td class="warning small"><div align="right">12&nbsp;/&nbsp;14</div></td>
-       <td class="warning big">       <div class="progress">
-         <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="80.00" aria-valuemin="0" aria-valuemax="100" style="width: 80.00%">
-           <span class="sr-only">80.00% covered (warning)</span>
-         </div>
-       </div>
-</td>
-       <td class="warning small"><div align="right">80.00%</div></td>
-       <td class="warning small"><div align="right">4&nbsp;/&nbsp;5</div></td>
        <td class="danger big">       <div class="progress">
          <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="0.00" aria-valuemin="0" aria-valuemax="100" style="width: 0.00%">
            <span class="sr-only">0.00% covered (danger)</span>
@@ -99,23 +71,23 @@
       </tr>
 
       <tr>
-       <td class="success"><img src="../_icons/file-code.svg" class="octicon" /><a href="AppCustomAuthenticator.php.html">AppCustomAuthenticator.php</a></td>
-       <td class="success big">       <div class="progress">
-         <div class="progress-bar bg-success" role="progressbar" aria-valuenow="90.91" aria-valuemin="0" aria-valuemax="100" style="width: 90.91%">
-           <span class="sr-only">90.91% covered (success)</span>
+       <td class="danger"><img src="../_icons/file-code.svg" class="octicon" /><a href="DeleteTaskCommand.php.html">DeleteTaskCommand.php</a></td>
+       <td class="danger big">       <div class="progress">
+         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="0.00" aria-valuemin="0" aria-valuemax="100" style="width: 0.00%">
+           <span class="sr-only">0.00% covered (danger)</span>
          </div>
        </div>
 </td>
-       <td class="success small"><div align="right">90.91%</div></td>
-       <td class="success small"><div align="right">10&nbsp;/&nbsp;11</div></td>
-       <td class="warning big">       <div class="progress">
-         <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="75.00" aria-valuemin="0" aria-valuemax="100" style="width: 75.00%">
-           <span class="sr-only">75.00% covered (warning)</span>
+       <td class="danger small"><div align="right">0.00%</div></td>
+       <td class="danger small"><div align="right">0&nbsp;/&nbsp;4</div></td>
+       <td class="danger big">       <div class="progress">
+         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="0.00" aria-valuemin="0" aria-valuemax="100" style="width: 0.00%">
+           <span class="sr-only">0.00% covered (danger)</span>
          </div>
        </div>
 </td>
-       <td class="warning small"><div align="right">75.00%</div></td>
-       <td class="warning small"><div align="right">3&nbsp;/&nbsp;4</div></td>
+       <td class="danger small"><div align="right">0.00%</div></td>
+       <td class="danger small"><div align="right">0&nbsp;/&nbsp;2</div></td>
        <td class="danger big">       <div class="progress">
          <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="0.00" aria-valuemin="0" aria-valuemax="100" style="width: 0.00%">
            <span class="sr-only">0.00% covered (danger)</span>
