--- a/coverage-test/Security/Voter/dashboard.html
+++ b/coverage-test/Security/Voter/dashboard.html
@@ -2,12 +2,12 @@
 <html lang="en">
  <head>
   <meta charset="UTF-8">
-  <title>Dashboard for D:\Sites\Lab\ToDo-Co\src\Form</title>
+  <title>Dashboard for D:\Sites\Lab\ToDo-Co\src\Security\Voter</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="../_css/bootstrap.min.css" rel="stylesheet" type="text/css">
-  <link href="../_css/nv.d3.min.css" rel="stylesheet" type="text/css">
-  <link href="../_css/style.css" rel="stylesheet" type="text/css">
-  <link href="../_css/custom.css" rel="stylesheet" type="text/css">
+  <link href="../../_css/bootstrap.min.css" rel="stylesheet" type="text/css">
+  <link href="../../_css/nv.d3.min.css" rel="stylesheet" type="text/css">
+  <link href="../../_css/style.css" rel="stylesheet" type="text/css">
+  <link href="../../_css/custom.css" rel="stylesheet" type="text/css">
  </head>
  <body>
   <header>
@@ -16,8 +16,9 @@
      <div class="col-md-12">
       <nav aria-label="breadcrumb">
        <ol class="breadcrumb">
-         <li class="breadcrumb-item"><a href="../index.html">D:\Sites\Lab\ToDo-Co\src</a></li>
-         <li class="breadcrumb-item"><a href="index.html">Form</a></li>
+         <li class="breadcrumb-item"><a href="../../index.html">D:\Sites\Lab\ToDo-Co\src</a></li>
+         <li class="breadcrumb-item"><a href="../index.html">Security</a></li>
+         <li class="breadcrumb-item"><a href="index.html">Voter</a></li>
          <li class="breadcrumb-item active">(Dashboard)</li>
 
        </ol>
@@ -58,6 +59,7 @@
         </tr>
        </thead>
        <tbody>
+       <tr><td><a href="TaskVoter.php.html#11">App\Security\Voter\TaskVoter</a></td><td class="text-right">85%</td></tr>
 
        </tbody>
       </table>
@@ -74,6 +76,7 @@
         </tr>
        </thead>
        <tbody>
+       <tr><td><a href="TaskVoter.php.html#11">App\Security\Voter\TaskVoter</a></td><td class="text-right">10</td></tr>
 
        </tbody>
       </table>
@@ -111,6 +114,7 @@
         </tr>
        </thead>
        <tbody>
+       <tr><td><a href="TaskVoter.php.html#31"><abbr title="App\Security\Voter\TaskVoter::voteOnAttribute">voteOnAttribute</abbr></a></td><td class="text-right">80%</td></tr>
 
        </tbody>
       </table>
@@ -127,6 +131,7 @@
         </tr>
        </thead>
        <tbody>
+       <tr><td><a href="TaskVoter.php.html#31"><abbr title="App\Security\Voter\TaskVoter::voteOnAttribute">voteOnAttribute</abbr></a></td><td class="text-right">5</td></tr>
 
        </tbody>
       </table>
@@ -140,9 +145,9 @@
     </p>
    </footer>
   </div>
-  <script src="../_js/jquery.min.js" type="text/javascript"></script>
-  <script src="../_js/d3.min.js" type="text/javascript"></script>
-  <script src="../_js/nv.d3.min.js" type="text/javascript"></script>
+  <script src="../../_js/jquery.min.js" type="text/javascript"></script>
+  <script src="../../_js/d3.min.js" type="text/javascript"></script>
+  <script src="../../_js/nv.d3.min.js" type="text/javascript"></script>
   <script type="text/javascript">
 $(document).ready(function() {
   nv.addGraph(function() {
@@ -155,7 +160,7 @@ $(document).ready(function() {
       .yAxis.tickFormat(d3.format('d'));
 
     d3.select('#classCoverageDistribution svg')
-      .datum(getCoverageDistributionData([0,0,0,0,0,0,0,0,0,0,0,3], "Class Coverage"))
+      .datum(getCoverageDistributionData([0,0,0,0,0,0,0,0,0,1,0,0], "Class Coverage"))
       .transition().duration(500).call(chart);
 
     nv.utils.windowResize(chart.update);
@@ -173,7 +178,7 @@ $(document).ready(function() {
       .yAxis.tickFormat(d3.format('d'));
 
     d3.select('#methodCoverageDistribution svg')
-      .datum(getCoverageDistributionData([0,0,0,0,0,0,0,0,0,0,0,7], "Method Coverage"))
+      .datum(getCoverageDistributionData([0,0,0,0,0,0,0,0,0,1,0,4], "Method Coverage"))
       .transition().duration(500).call(chart);
 
     nv.utils.windowResize(chart.update);
@@ -223,7 +228,7 @@ $(document).ready(function() {
     chart.yAxis.axisLabel('Cyclomatic Complexity');
 
     d3.select('#classComplexity svg')
-      .datum(getComplexityData([[100,3,"<a href=\"SearchType.php.html#19\">App\\Form\\SearchType<\/a>"],[100,2,"<a href=\"TaskType.php.html#11\">App\\Form\\TaskType<\/a>"],[100,3,"<a href=\"UserType.php.html#16\">App\\Form\\UserType<\/a>"]], 'Class Complexity'))
+      .datum(getComplexityData([[85.71428571428571,10,"<a href=\"TaskVoter.php.html#11\">App\\Security\\Voter\\TaskVoter<\/a>"]], 'Class Complexity'))
       .transition()
       .duration(500)
       .call(chart);
@@ -247,7 +252,7 @@ $(document).ready(function() {
     chart.yAxis.axisLabel('Method Complexity');
 
     d3.select('#methodComplexity svg')
-      .datum(getComplexityData([[100,1,"<a href=\"SearchType.php.html#21\">App\\Form\\SearchType::buildForm<\/a>"],[100,1,"<a href=\"SearchType.php.html#42\">App\\Form\\SearchType::configureOptions<\/a>"],[100,1,"<a href=\"SearchType.php.html#55\">App\\Form\\SearchType::getBlockPrefix<\/a>"],[100,1,"<a href=\"TaskType.php.html#13\">App\\Form\\TaskType::buildForm<\/a>"],[100,1,"<a href=\"TaskType.php.html#25\">App\\Form\\TaskType::configureOptions<\/a>"],[100,2,"<a href=\"UserType.php.html#18\">App\\Form\\UserType::buildForm<\/a>"],[100,1,"<a href=\"UserType.php.html#57\">App\\Form\\UserType::configureOptions<\/a>"]], 'Method Complexity'))
+      .datum(getComplexityData([[100,1,"<a href=\"TaskVoter.php.html#18\">App\\Security\\Voter\\TaskVoter::__construct<\/a>"],[100,2,"<a href=\"TaskVoter.php.html#23\">App\\Security\\Voter\\TaskVoter::supports<\/a>"],[80,5,"<a href=\"TaskVoter.php.html#31\">App\\Security\\Voter\\TaskVoter::voteOnAttribute<\/a>"],[100,1,"<a href=\"TaskVoter.php.html#58\">App\\Security\\Voter\\TaskVoter::canEdit<\/a>"],[100,1,"<a href=\"TaskVoter.php.html#63\">App\\Security\\Voter\\TaskVoter::canDelete<\/a>"]], 'Method Complexity'))
       .transition()
       .duration(500)
       .call(chart);
