--- a/coverage-test/Service/dashboard.html
+++ b/coverage-test/Service/dashboard.html
@@ -2,7 +2,7 @@
 <html lang="en">
  <head>
   <meta charset="UTF-8">
-  <title>Dashboard for D:\Sites\Lab\ToDo-Co\src\Form</title>
+  <title>Dashboard for D:\Sites\Lab\ToDo-Co\src\Service</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../_css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="../_css/nv.d3.min.css" rel="stylesheet" type="text/css">
@@ -17,7 +17,7 @@
       <nav aria-label="breadcrumb">
        <ol class="breadcrumb">
          <li class="breadcrumb-item"><a href="../index.html">D:\Sites\Lab\ToDo-Co\src</a></li>
-         <li class="breadcrumb-item"><a href="index.html">Form</a></li>
+         <li class="breadcrumb-item"><a href="index.html">Service</a></li>
          <li class="breadcrumb-item active">(Dashboard)</li>
 
        </ol>
@@ -58,6 +58,8 @@
         </tr>
        </thead>
        <tbody>
+       <tr><td><a href="DeleteTaskService.php.html#10">App\Service\DeleteTaskService</a></td><td class="text-right">20%</td></tr>
+       <tr><td><a href="FlagTaskService.php.html#14">App\Service\FlagTaskService</a></td><td class="text-right">44%</td></tr>
 
        </tbody>
       </table>
@@ -74,6 +76,7 @@
         </tr>
        </thead>
        <tbody>
+       <tr><td><a href="FlagTaskService.php.html#14">App\Service\FlagTaskService</a></td><td class="text-right">9</td></tr>
 
        </tbody>
       </table>
@@ -111,6 +114,9 @@
         </tr>
        </thead>
        <tbody>
+       <tr><td><a href="DeleteTaskService.php.html#20"><abbr title="App\Service\DeleteTaskService::deleteTaskAuto">deleteTaskAuto</abbr></a></td><td class="text-right">0%</td></tr>
+       <tr><td><a href="FlagTaskService.php.html#30"><abbr title="App\Service\FlagTaskService::flagIsDone">flagIsDone</abbr></a></td><td class="text-right">0%</td></tr>
+       <tr><td><a href="FlagTaskService.php.html#16"><abbr title="App\Service\FlagTaskService::flagTask">flagTask</abbr></a></td><td class="text-right">40%</td></tr>
 
        </tbody>
       </table>
@@ -127,6 +133,7 @@
         </tr>
        </thead>
        <tbody>
+       <tr><td><a href="FlagTaskService.php.html#16"><abbr title="App\Service\FlagTaskService::flagTask">flagTask</abbr></a></td><td class="text-right">4</td></tr>
 
        </tbody>
       </table>
@@ -155,7 +162,7 @@ $(document).ready(function() {
       .yAxis.tickFormat(d3.format('d'));
 
     d3.select('#classCoverageDistribution svg')
-      .datum(getCoverageDistributionData([0,0,0,0,0,0,0,0,0,0,0,3], "Class Coverage"))
+      .datum(getCoverageDistributionData([0,0,0,1,0,1,0,0,0,0,0,0], "Class Coverage"))
       .transition().duration(500).call(chart);
 
     nv.utils.windowResize(chart.update);
@@ -173,7 +180,7 @@ $(document).ready(function() {
       .yAxis.tickFormat(d3.format('d'));
 
     d3.select('#methodCoverageDistribution svg')
-      .datum(getCoverageDistributionData([0,0,0,0,0,0,0,0,0,0,0,7], "Method Coverage"))
+      .datum(getCoverageDistributionData([2,0,0,0,0,1,0,0,0,0,0,2], "Method Coverage"))
       .transition().duration(500).call(chart);
 
     nv.utils.windowResize(chart.update);
@@ -223,7 +230,7 @@ $(document).ready(function() {
     chart.yAxis.axisLabel('Cyclomatic Complexity');
 
     d3.select('#classComplexity svg')
-      .datum(getComplexityData([[100,3,"<a href=\"SearchType.php.html#19\">App\\Form\\SearchType<\/a>"],[100,2,"<a href=\"TaskType.php.html#11\">App\\Form\\TaskType<\/a>"],[100,3,"<a href=\"UserType.php.html#16\">App\\Form\\UserType<\/a>"]], 'Class Complexity'))
+      .datum(getComplexityData([[20,2,"<a href=\"DeleteTaskService.php.html#10\">App\\Service\\DeleteTaskService<\/a>"],[44.44444444444444,5,"<a href=\"FlagTaskService.php.html#14\">App\\Service\\FlagTaskService<\/a>"]], 'Class Complexity'))
       .transition()
       .duration(500)
       .call(chart);
@@ -247,7 +254,7 @@ $(document).ready(function() {
     chart.yAxis.axisLabel('Method Complexity');
 
     d3.select('#methodComplexity svg')
-      .datum(getComplexityData([[100,1,"<a href=\"SearchType.php.html#21\">App\\Form\\SearchType::buildForm<\/a>"],[100,1,"<a href=\"SearchType.php.html#42\">App\\Form\\SearchType::configureOptions<\/a>"],[100,1,"<a href=\"SearchType.php.html#55\">App\\Form\\SearchType::getBlockPrefix<\/a>"],[100,1,"<a href=\"TaskType.php.html#13\">App\\Form\\TaskType::buildForm<\/a>"],[100,1,"<a href=\"TaskType.php.html#25\">App\\Form\\TaskType::configureOptions<\/a>"],[100,2,"<a href=\"UserType.php.html#18\">App\\Form\\UserType::buildForm<\/a>"],[100,1,"<a href=\"UserType.php.html#57\">App\\Form\\UserType::configureOptions<\/a>"]], 'Method Complexity'))
+      .datum(getComplexityData([[100,1,"<a href=\"DeleteTaskService.php.html#12\">App\\Service\\DeleteTaskService::__construct<\/a>"],[0,1,"<a href=\"DeleteTaskService.php.html#20\">App\\Service\\DeleteTaskService::deleteTaskAuto<\/a>"],[40,3,"<a href=\"FlagTaskService.php.html#16\">App\\Service\\FlagTaskService::flagTask<\/a>"],[0,1,"<a href=\"FlagTaskService.php.html#30\">App\\Service\\FlagTaskService::flagIsDone<\/a>"],[100,1,"<a href=\"FlagTaskService.php.html#36\">App\\Service\\FlagTaskService::flagIsNotDone<\/a>"]], 'Method Complexity'))
       .transition()
       .duration(500)
       .call(chart);
