--- a/coverage-test/Service/index.html
+++ b/coverage-test/Service/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
  <head>
   <meta charset="UTF-8">
-  <title>Code Coverage for D:\Sites\Lab\ToDo-Co\src\Repository</title>
+  <title>Code Coverage for D:\Sites\Lab\ToDo-Co\src\Service</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="../_css/bootstrap.min.css" rel="stylesheet" type="text/css">
   <link href="../_css/octicons.css" rel="stylesheet" type="text/css">
@@ -17,7 +17,7 @@
       <nav aria-label="breadcrumb">
        <ol class="breadcrumb">
          <li class="breadcrumb-item"><a href="../index.html">D:\Sites\Lab\ToDo-Co\src</a></li>
-         <li class="breadcrumb-item active">Repository</li>
+         <li class="breadcrumb-item active">Service</li>
          <li class="breadcrumb-item">(<a href="dashboard.html">Dashboard</a>)</li>
 
        </ol>
@@ -43,43 +43,43 @@
      </thead>
      <tbody>
       <tr>
-       <td class="warning">Total</td>
-       <td class="warning big">       <div class="progress">
-         <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="52.63" aria-valuemin="0" aria-valuemax="100" style="width: 52.63%">
-           <span class="sr-only">52.63% covered (warning)</span>
-         </div>
-       </div>
-</td>
-       <td class="warning small"><div align="right">52.63%</div></td>
-       <td class="warning small"><div align="right">10&nbsp;/&nbsp;19</div></td>
-       <td class="warning big">       <div class="progress">
-         <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="66.67" aria-valuemin="0" aria-valuemax="100" style="width: 66.67%">
-           <span class="sr-only">66.67% covered (warning)</span>
-         </div>
-       </div>
-</td>
-       <td class="warning small"><div align="right">66.67%</div></td>
-       <td class="warning small"><div align="right">2&nbsp;/&nbsp;3</div></td>
+       <td class="danger">Total</td>
        <td class="danger big">       <div class="progress">
-         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="50.00" aria-valuemin="0" aria-valuemax="100" style="width: 50.00%">
-           <span class="sr-only">50.00% covered (danger)</span>
+         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="35.71" aria-valuemin="0" aria-valuemax="100" style="width: 35.71%">
+           <span class="sr-only">35.71% covered (danger)</span>
          </div>
        </div>
 </td>
-       <td class="danger small"><div align="right">50.00%</div></td>
-       <td class="danger small"><div align="right">1&nbsp;/&nbsp;2</div></td>
+       <td class="danger small"><div align="right">35.71%</div></td>
+       <td class="danger small"><div align="right">5&nbsp;/&nbsp;14</div></td>
+       <td class="danger big">       <div class="progress">
+         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="40.00" aria-valuemin="0" aria-valuemax="100" style="width: 40.00%">
+           <span class="sr-only">40.00% covered (danger)</span>
+         </div>
+       </div>
+</td>
+       <td class="danger small"><div align="right">40.00%</div></td>
+       <td class="danger small"><div align="right">2&nbsp;/&nbsp;5</div></td>
+       <td class="danger big">       <div class="progress">
+         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="0.00" aria-valuemin="0" aria-valuemax="100" style="width: 0.00%">
+           <span class="sr-only">0.00% covered (danger)</span>
+         </div>
+       </div>
+</td>
+       <td class="danger small"><div align="right">0.00%</div></td>
+       <td class="danger small"><div align="right">0&nbsp;/&nbsp;2</div></td>
       </tr>
 
       <tr>
-       <td class="danger"><img src="../_icons/file-code.svg" class="octicon" /><a href="TaskRepository.php.html">TaskRepository.php</a></td>
+       <td class="danger"><img src="../_icons/file-code.svg" class="octicon" /><a href="DeleteTaskService.php.html">DeleteTaskService.php</a></td>
        <td class="danger big">       <div class="progress">
-         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="50.00" aria-valuemin="0" aria-valuemax="100" style="width: 50.00%">
-           <span class="sr-only">50.00% covered (danger)</span>
+         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="20.00" aria-valuemin="0" aria-valuemax="100" style="width: 20.00%">
+           <span class="sr-only">20.00% covered (danger)</span>
          </div>
        </div>
 </td>
-       <td class="danger small"><div align="right">50.00%</div></td>
-       <td class="danger small"><div align="right">9&nbsp;/&nbsp;18</div></td>
+       <td class="danger small"><div align="right">20.00%</div></td>
+       <td class="danger small"><div align="right">1&nbsp;/&nbsp;5</div></td>
        <td class="danger big">       <div class="progress">
          <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="50.00" aria-valuemin="0" aria-valuemax="100" style="width: 50.00%">
            <span class="sr-only">50.00% covered (danger)</span>
@@ -99,31 +99,31 @@
       </tr>
 
       <tr>
-       <td class="success"><img src="../_icons/file-code.svg" class="octicon" /><a href="UserRepository.php.html">UserRepository.php</a></td>
-       <td class="success big">       <div class="progress">
-         <div class="progress-bar bg-success" role="progressbar" aria-valuenow="100.00" aria-valuemin="0" aria-valuemax="100" style="width: 100.00%">
-           <span class="sr-only">100.00% covered (success)</span>
+       <td class="danger"><img src="../_icons/file-code.svg" class="octicon" /><a href="FlagTaskService.php.html">FlagTaskService.php</a></td>
+       <td class="danger big">       <div class="progress">
+         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="44.44" aria-valuemin="0" aria-valuemax="100" style="width: 44.44%">
+           <span class="sr-only">44.44% covered (danger)</span>
          </div>
        </div>
 </td>
-       <td class="success small"><div align="right">100.00%</div></td>
-       <td class="success small"><div align="right">1&nbsp;/&nbsp;1</div></td>
-       <td class="success big">       <div class="progress">
-         <div class="progress-bar bg-success" role="progressbar" aria-valuenow="100.00" aria-valuemin="0" aria-valuemax="100" style="width: 100.00%">
-           <span class="sr-only">100.00% covered (success)</span>
+       <td class="danger small"><div align="right">44.44%</div></td>
+       <td class="danger small"><div align="right">4&nbsp;/&nbsp;9</div></td>
+       <td class="danger big">       <div class="progress">
+         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="33.33" aria-valuemin="0" aria-valuemax="100" style="width: 33.33%">
+           <span class="sr-only">33.33% covered (danger)</span>
          </div>
        </div>
 </td>
-       <td class="success small"><div align="right">100.00%</div></td>
-       <td class="success small"><div align="right">1&nbsp;/&nbsp;1</div></td>
-       <td class="success big">       <div class="progress">
-         <div class="progress-bar bg-success" role="progressbar" aria-valuenow="100.00" aria-valuemin="0" aria-valuemax="100" style="width: 100.00%">
-           <span class="sr-only">100.00% covered (success)</span>
+       <td class="danger small"><div align="right">33.33%</div></td>
+       <td class="danger small"><div align="right">1&nbsp;/&nbsp;3</div></td>
+       <td class="danger big">       <div class="progress">
+         <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="0.00" aria-valuemin="0" aria-valuemax="100" style="width: 0.00%">
+           <span class="sr-only">0.00% covered (danger)</span>
          </div>
        </div>
 </td>
-       <td class="success small"><div align="right">100.00%</div></td>
-       <td class="success small"><div align="right">1&nbsp;/&nbsp;1</div></td>
+       <td class="danger small"><div align="right">0.00%</div></td>
+       <td class="danger small"><div align="right">0&nbsp;/&nbsp;1</div></td>
       </tr>
 
 
